# security-advisories

.github/workflows/: cabal.yml  check-advisories-standalone.yml  check-advisories.yml  haskell-ci.yml  nix.yml
advisories/hackage/aeson/: HSEC-2023-0011.md
advisories/hackage/biscuit-haskell/: HSEC-2023-0002.md
advisories/hackage/git-annex/: HSEC-2023-0011.md
code/hsec-tools/: cabal.project  flake.nix  hsec-tools.cabal
code/hsec-tools/src/Security/Advisories/: Parse.hs
