cabal-version:      2.4
name:               hsec-tools
version:            0.1.0.0
tested-with:        GHC==9.2.7, GHC==9.0.2, GHC==8.10.7

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Christiansen
maintainer:         david@davidchristiansen.dk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hsec-render
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14 && < 4.17,
                      commonmark ^>= 0.2.2,
                      text ^>= 1.2,
                      time ^>= 1.9 || ^>= 1.10 || ^>= 1.11 || ^>= 1.12,
                      Cabal ^>= 3.6.3.0,
                      mtl ^>= 2.2,
                      unordered-containers,
                      containers ^>= 0.6,
                      toml-reader ^>= 0.1 || ^>= 0.2
    hs-source-dirs:   app
    default-language: Haskell2010
